# lodsuite-control

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  decisions.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  main.py
app/api/: characters.py  health.py  jobs.py  render_queue.py  router.py
app/bot/: keyboards.py  main.py
app/bot/handlers/: callbacks.py  jobs_list.py  new_job.py  start.py  status.py
app/db/: crud.py  database.py  models.py
app/schemas/: job.py  script.py
app/services/: library.py  script_generator.py  script_parser.py  state_machine.py
app/static/: index.html
characters/markus_industrial/: style_guide.md
systemd/: lodsuite-api.service  lodsuite-bot.service  lodsuite-control.service
tests/: conftest.py  test_api.py  test_script_parser.py  test_state_machine.py
