[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lodsuite-control"
version = "0.1.0"
description = "Lodsuite UGC Pipeline - Control Plane"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lodsuite Team"}
]

dependencies = [
    # Core
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    # Database
    "sqlalchemy==2.0.35",
    "aiosqlite==0.20.0",
    "alembic==1.13.0",
    # Telegram
    "python-telegram-bot==21.5",
    # Queue
    "redis==5.0.0",
    "rq==1.16.0",
    # HTTP Client
    "httpx==0.27.0",
    # AI
    "anthropic==0.34.0",
    # Parsing
    "pyyaml==6.0.0",
    # Logging
    "structlog==24.4.0",
    # Utils
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.6.0",
    "mypy==1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
